<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:padding="16sp"
            android:src="@drawable/sasha_sloan" />

        <TextView
            android:id="@+id/about_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/gotham_book"
            android:text="@string/about_desc"
            android:textColor="@color/lyric_color"
            android:textSize="16sp"
            android:lineSpacingExtra="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/bunch_blossoms"
            android:textColor="@color/colorPrimaryDark"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/about_developer"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="8sp"
            android:background="@color/lyric_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/profile_image" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/gotham_book"
                android:textColor="@color/lyric_color"
                android:textSize="16sp"
                android:lineSpacingExtra="8sp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_profile" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
